--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virtual-elements",
-  "version": "0.0.0",
-  "description": "Providers wrappers for virtual-hyperscript elements.",
+  "version": "0.0.1",
+  "description": "Wrappers for virtual-hyperscript elements.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"leia Olavo de Carvalho.\""
