--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "virtual-elements",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Wrappers for virtual-hyperscript elements.",
   "main": "index.js",
   "scripts": {
@@ -8,12 +8,9 @@
   },
   "keywords": [
     "virtual-hyperscript",
-    "react",
-    "reactjs"
+    "virtual-dom",
+    "virtual dom"
   ],
   "author": "Giovanni T. Parra",
-  "license": "MIT",
-  "dependencies": {
-    "virtual-hyperscript": "^4.6.0"
-  }
+  "license": "MIT"
 }
